fix(SearchMain): correct the alignment of text elements
As per layout (Figma).

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -49,7 +49,7 @@
   opacity: 1;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .main__searched-news {
